package com.example.Factory;

/**
 * Created by 11041730 on 2017/3/28.
 */

public interface Human {
    void getColor();

    void talk();
}
